# rust-url-shortener

./: Cargo.toml  README.md
assets/: URL Shortener.postman_collection.json
src/: main.rs
src/handlers/: general.rs  mod.rs  shortener.rs
src/helpers/: catcher.rs  mod.rs  shortener.rs  validation.rs
src/models/: shortener.rs
src/responses/: general.rs
