[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
redis = { version = "0.24.0", features = ["json", "tokio-comp"] }
regex = "1.10.3"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
